Added initial support for JVM unit testing. Also added test for Utils.